--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -17,20 +17,20 @@ div img {
   width: 100%;
 }
 
-section {
+.container {
   display: flex;
   max-width: 75rem;
   width: 100%;
   margin: auto;
 }
 
-.menu {
+#menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-header {
+header, footer {
   background: #122A57;
   height: 4.375rem;
   display: flex;
@@ -47,8 +47,8 @@ header ul li a {
   color: #FFFFFF;
 }
 
-.presentation {
-  height: 100vh;
+#presentation {
+  height: calc(100vh - 4.375rem);
   align-items: center;
   justify-content: space-between;
 }
@@ -63,7 +63,7 @@ header ul li a {
   margin-bottom: 0.625rem;
 }
 
-.text-presentation a {
+.button {
   background: #122A57;
   color: #FFFFFF;
   text-align: center;
@@ -77,19 +77,20 @@ header ul li a {
   margin-bottom: 0.625rem;
 }
 
-.about {
+#about {
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 5rem;
 }
 
-.about h2 {
+#about h2 {
   font-size: 2rem;
   color: #122A57;
   display: flex;
   margin-bottom: 1.25rem;
 }
 
-.about h2::before {
+#about h2::before {
   content: '';
   height: 2.5rem;
   width: 5px;
@@ -98,6 +99,178 @@ header ul li a {
   position: relative;
 }
 
-.about p {
+#about p {
   margin-bottom: 0.625rem;
+}
+
+#about img {
+  min-width: 26.25rem;
+}
+
+#services {
+  background: #122A57;
+}
+
+#services .container {
+  flex-direction: column;
+  padding: 6.25rem 0;
+}
+
+#services .container h2 {
+  color: #FFFFFF;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.services-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.services-item {
+  text-align: center;
+}
+
+.services-item a {
+  background: #FFFFFF;
+  border-radius: 1.875rem;
+  padding: 5px 10px;
+  font-weight: 700;
+  color: #122A57;
+}
+
+.services-item p {
+  font-weight: 700;
+  font-size: 1.125rem;
+  color: #FFFFFF;
+  margin: 1.25rem 0;
+}
+
+#plans {
+  flex-direction: column;
+  padding: 3.125rem 0;
+}
+
+#plans h2 {
+  color: #122A57;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.plans-list {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.plans-item {
+  flex: 1;
+  border: 4px solid #122A57;
+  margin-right: 1.25rem;
+  padding: 0.625rem;
+  max-width: 18rem;
+}
+
+.plans-item .button {
+  margin: auto;
+  margin-bottom: 1.25rem;
+}
+
+.plans-item h3 {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 1.25rem;
+}
+
+.plans-item h3::after {
+  content: '';
+  background: #122A57;
+  width: 100%;
+  height: 3px;
+  margin: 1.25rem 0 0.625rem 0;
+}
+
+.plans-item ul {
+  padding: 0.625rem 1.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.plans-item ul li {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.plans-item ul li::before {
+  content: '';
+  width: 0.625rem;
+  height: 0.625rem;
+  background: #122A57;
+  margin-right: 5px;
+}
+
+footer .container {
+  justify-content: space-between;
+}
+
+footer .container a {
+  color: rgb(199, 199, 199)
+}
+
+@media(max-width: 992px) {
+  .container, #presentation, .plans-list, .services-list {
+    flex-direction: column;
+  }
+
+  #presentation {
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .text-presentation {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  #about {
+    flex-direction: column-reverse;
+  }
+
+  #about p, #about h2 {
+    margin: 0 1rem;
+  }
+
+  #about img {
+    min-width: 0;
+    max-width: 90%;
+    margin: auto;
+  }
+
+  .services-list img {
+    max-width: 60%;
+    margin: 1rem auto;
+  }
+
+  h2 {
+    text-align: center;
+  }
+
+  footer .container, .plans-list {
+    align-items: center;
+  }
+
+  .plans-list {
+    gap: 2rem;
+  }
+
+  .plans-item {
+    margin: 0;
+  }
 }
